@@ -1,3 +1,13 @@
+2012-09-06  Ramon Casero  <rcasero@gmail.com>
+
+	* cpp/src/CMakeLists.txt: (v0.2.0)
+	* Delete cpp/src/third-party/gmp-5.0.5/CMakeLists.txt
+	* Delete cpp/src/third-party/mpfr-3.1.1/CMakeLists.txt
+
+	- From cmake 2.8.8 onwards, external projects that don't use CMake
+	can be built using module ExternalProject_Add(). This is what we
+	use now to build the GMP and MPFR libraries.
+
 2012-09-05  Ramon Casero  <rcasero@gmail.com>
 
 	* matlab/ItkToolbox/CMakeLists.txt: (v0.5.2)
